<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/14 17:34
 */

namespace DesignPatterns\Structural\Composite;

interface Renderable
{
    public function render();
}
