@startuml
interface Renderable {
    + render()
}

class Html {
    - $elements
    + render()
    + addElement(Renderable $element)
    + removeElement(Renderable $element)
}

class DivElement {
    - Renderable $element
    + __construct(Renderable $element)
    + render()
}

class SpanElement {
    - Renderable $element
    + __construct(Renderable $element)
    + render()
}

class TextElement {
    - $text
    + __construct($text)
    + render()
}

Renderable <|.. Html
Renderable <|.. DivElement
Renderable <|.. SpanElement
Renderable <|.. TextElement
Html o--> Renderable
@enduml